# spec-clarifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LLMs.md  Makefile  README.md  TESTING_SUMMARY.md  notes.md  openapi.json  pyproject.toml  requirements.txt
.github/repo-analysis-output/: dependencies.json  dependencies.md  tree.json  tree.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes_clarifications.py  routes_config.py  routes_health.py
app/models/: __init__.py  config_models.py  specs.py
app/services/: __init__.py  clarification.py  downstream.py  job_store.py  llm_clients.py
app/utils/: __init__.py  logging_helper.py  metrics.py
docs/: LOGGING_AND_METRICS.md
tests/: README.md  __init__.py  conftest.py  test_async_job_lifecycle.py  test_clarification_service.py  test_clarifications_api.py  test_config.py  test_config_admin_api.py  test_downstream.py  test_dummy_mode.py  test_health.py  test_job_store.py  test_llm_clients.py  test_llm_integration.py  test_logging_helper.py  test_main.py  test_metrics.py  test_models.py  test_openapi_metadata.py  test_prompt_builder.py
